# paper-translater

./: README.md  agent.py  config.py  pyproject.toml
tests/: conftest.py  test_agent.py  test_pdf_loader.py
utils/: pdf_loader.py
