[project]
name = "paper-translater"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael",email = "xcellentbird@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymupdf4llm (>=0.2.5,<0.3.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
